--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -126,3 +126,10 @@
         transform: translateX(10px);
     }
 }
+
+
+.demo-editor {
+    border: 1px solid #F1F1F1;
+    border-radius: 2px;
+    padding: 3px 5px 0;
+}
